# axiom

./: .env.example  .gitignore  ADL.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  docker-compose.yml
.github/: copilot-instructions.md  (+1 more)
ai-architect-agent/: .coverage  pyproject.toml
ai-architect-agent/app/: main.py
ai-architect-agent/app/llm/: budget.py  client.py  schemas.py
ai-architect-agent/app/models/: context.py  outputs.py
ai-architect-agent/app/observability/: metrics.py  tracing.py
ai-architect-agent/app/pipeline/: graph.py
ai-architect-agent/app/prompts/: adl_generator.j2  architecture_generator.j2  diagram_generator_single.j2  fmea_analyzer.j2  review_governance_score.j2  review_tradeoff_stress.j2  weakness_analyzer.j2
ai-architect-agent/app/prompts/workshop/: deduplicate_attributes.j2  elicit_scenarios.j2  generate_from_evidence.j2  generate_questions.j2  generate_utility_tree.j2  identify_gaps.j2  infer_attributes_from_scenarios.j2  reconcile_gaps.j2  resolve_questions.j2  synthesise_implications.j2
ai-architect-agent/app/review/: agent.py  context.py  nodes.py
ai-architect-agent/app/tools/: adl_generator.py  architecture_generator.py  base.py  buy_vs_build_analyzer.py  challenge_engine.py  characteristic_reasoner.py  conflict_analyzer.py  diagram_generator.py  fmea_analyzer.py  requirement_parser.py  scenario_modeler.py  tactics_advisor.py  trade_off_engine.py  weakness_analyzer.py
ai-architect-agent/app/workshop/: agent.py  consolidator.py  context.py  elicitor.py  gap_reconciler.py  implication_synthesiser.py  nodes.py  resolver.py  taxonomy.py  utility_tree_generator.py
ai-architect-agent/tests/integration/workshop/: test_scenario_completeness.py
ai-architect-agent/tests/unit/: test_canonical_decisions.py  test_llm_client.py  test_supporting_stage_resilience.py  test_tracing.py
ai-architect-agent/tests/unit/llm/: test_budget.py  test_client_structured_output.py  test_llm_client.py  test_ollama_empty_response.py  test_schema_registry.py
lens-agent/: Dockerfile  pyproject.toml
lens-agent/app/: main.py
lens-agent/app/api/: routes.py
lens-agent/app/llm/: client.py  schemas.py
lens-agent/app/models/: contracts.py
lens-agent/app/observability/: __init__.py
lens-agent/app/pipeline/: graph.py  nodes.py
lens-agent/app/tools/: gap_analyzer.py  gap_assessor.py
lens-agent/tests/agent/: qa_report.md  qa_verification_report.md
lens-agent/tests/unit/: test_pipeline_graph.py
memoria-agent/: Dockerfile  pyproject.toml
memoria-agent/app/: __init__.py  main.py
memoria-agent/app/api/: __init__.py  routes.py
memoria-agent/app/llm/: __init__.py  client.py
memoria-agent/app/models/: __init__.py  contracts.py
memoria-agent/app/pipeline/: __init__.py  distiller.py
memoria-agent/app/tools/: __init__.py  conflict_detector.py  fact_extractor.py
memoria-agent/tests/unit/: test_distiller.py  test_health.py  test_llm_extraction.py
(+1148 files in other folders)
